# JASPER

./: README.md  example-config.yaml  example_jasper_config.yaml  jasper-demo.cast  jasper.py  pyproject.toml  requirements.txt
.github/workflows/: pr-checks.yml
jasper/: __main__.py
jasper/tests/: test_jasper.py
tests/: test_jasper.py
